--- a/expressjs/package.json
+++ b/expressjs/package.json
@@ -6,6 +6,9 @@
     "start": "node ./bin/www",
     "test": "nyc --reporter=html --reporter=text mocha"
   },
+  "engines": {
+    "node": "13.1.0"
+  },
   "dependencies": {
     "atob": "^2.1.2",
     "bcrypt": "^4.0.1",
