--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "heroku-prebuild": "cd expressjs",
+    "heroku-prebuild": "cd expressjs"
   }
 }
