--- a/expressjs/Procfile
+++ b/expressjs/Procfile
@@ -1,1 +1,1 @@
-web: cd expressjs && npm knex -g && knex migrate:latest && knex seed:run && node ./bin/www
+web: cd expressjs && npm knex -g && knex migrate:latest && knex seed:run
