--- a/expressjs/Procfile
+++ b/expressjs/Procfile
@@ -1,1 +1,1 @@
-web: cd expressjs && npm knex -g && knex migrate:latest && knex seed:run
+web: cd expressjs && npm install && npm install knex -g && knex migrate:latest && knex seed:run && npm start
